--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^2.2.0-rc.3",
-    "webpack-dev-server": "^2.2.0-rc.0"
+    "webpack-dev-server": "^2.11.5"
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
